# safe-init

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  stale.yml
docs/: LICENSE.md  acknowledgements.md  advanced_usage.md  configuration.md  features.md  getting_started.md  index.md  integrations.md  requirements.txt  troubleshooting.md  usage.md
docs/reference/: SUMMARY.md  decorator.md  dlq.md  errors.md  handler.md  safe_logging.md  sentry.md  slack.md  timeout.md  tracer.md  utils.md
safe_init/: __init__.py  decorator.py  dlq.py  environment.py  error_utils.py  errors.py  handler.py  safe_logging.py  secrets.py  sentry.py  slack.py  timeout.py  tracer.py  utils.py
scripts/: gen_ref_pages.py
test/: test_decorator.py  test_dlq.py  test_environment.py  test_error_utils.py  test_handler.py  test_safe_logging.py  test_secrets.py  test_sentry.py  test_slack.py  test_tracer.py  test_utils.py  test_wrapper.py
test/test_module/: __init__.py
